--- a/openfisca_pf/tests/dicp/it/cas_de_tests_activites_multiples.yaml
+++ b/openfisca_pf/tests/dicp/it/cas_de_tests_activites_multiples.yaml
@@ -1,4 +1,4 @@
-- name: 25 + 7 - avec annexe - avec releve
+- name: 63. 25 + 7 - avec annexe - avec releve
   period: 2020
   input:
     entreprise:
@@ -15,7 +15,9 @@
     it_calcule: 131250
     it_a_payer: 131250
     chiffre_affaire_total: 20000000
-- name: 23 + 90 - sans annexe - sans releve
+    cstns_calcule: 62500
+    cstns_a_payer: 62500
+- name: 64. 23 + 90 - sans annexe - sans releve
   period: 2020
   input:
     entreprise:
@@ -32,7 +34,9 @@
     it_calcule: 117500
     it_a_payer: 117500
     chiffre_affaire_total: 30000000
-- name: 8 + 10 + 20 - sans annexe - sans releve
+    cstns_calcule: 98750
+    cstns_a_payer: 98750
+- name: 65. 8 + 10 + 20 - sans annexe - sans releve
   period: 2020
   input:
     entreprise:
@@ -51,7 +55,9 @@
     it_calcule: 320000
     it_a_payer: 320000
     chiffre_affaire_total: 70000000
-- name: 8 + 10 + 20 + 24 - sans annexe - sans releve
+    cstns_calcule: 200000
+    cstns_a_payer: 200000
+- name: 66. 8 + 10 + 20 + 24 - sans annexe - sans releve
   period: 2020
   input:
     entreprise:
@@ -72,7 +78,9 @@
     it_calcule: 740000
     it_a_payer: 740000
     chiffre_affaire_total: 90000000
-- name: 8 + 10 + 20 + 24 - avec annexe - avec releve
+    cstns_calcule: 390000
+    cstns_a_payer: 390000
+- name: 67. 8 + 10 + 20 + 24 - avec annexe - avec releve
   period: 2020
   input:
     entreprise:
@@ -93,7 +101,9 @@
     it_calcule: 467500
     it_a_payer: 467500
     chiffre_affaire_total: 85000000
-- name: 8 + 10 + 20 + 24 - avec annexe - avec releve - ch > 50%
+    cstns_calcule: 270000
+    cstns_a_payer: 270000
+- name: 68. 8 + 10 + 20 + 24 - avec annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -114,7 +124,9 @@
     it_calcule: 530000
     it_a_payer: 530000
     chiffre_affaire_total: 90000000
-- name: 8 + 10 + 20 + 24 - avec annexe - avec releve - ch > 50%
+    cstns_calcule: 295000
+    cstns_a_payer: 295000
+- name: 69. 8 + 10 + 20 + 24 - avec annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -135,7 +147,9 @@
     it_calcule: 740000
     it_a_payer: 740000
     chiffre_affaire_total: 90000000
-- name: 8 + 10 + 20 + 24 - sans annexe - sans releve - ch > 50%
+    cstns_calcule: 390000
+    cstns_a_payer: 390000
+- name: 70. 8 + 10 + 20 + 24 - sans annexe - sans releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -156,7 +170,28 @@
     it_calcule: 740000
     it_a_payer: 740000
     chiffre_affaire_total: 90000000
-- name: 92 + 96 - avec annexe - avec releve - ch > 50%
+    cstns_calcule: 390000
+    cstns_a_payer: 390000
+- name: 71. 92 + 96 - avec annexe - avec releve
+  period: 2020
+  input:
+    entreprise:
+      entreprise_est_personne_physique: false
+      releve_de_charges_fourni: true
+      annexes_IT_fournies: true
+      chiffre_affaire_artisans: 10000000
+      charges_artisans: 0
+      chiffre_affaire_boulangeries_autres: 5000000
+      charges_boulangeries_autres: 0
+    persons:
+      Alicia: {}
+  output:
+    it_calcule: 502500
+    it_a_payer: 502500
+    chiffre_affaire_total: 15000000
+    cstns_calcule: 237500
+    cstns_a_payer: 237500
+- name: 72. 92 + 96 - avec annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -173,7 +208,9 @@
     it_calcule: 251250
     it_a_payer: 251250
     chiffre_affaire_total: 15000000
-- name: 92 + 96 - avec annexe - avec releve
+    cstns_calcule: 118750
+    cstns_a_payer: 118750
+- name: 73. 92 + 96 - avec annexe - avec releve
   period: 2020
   input:
     entreprise:
@@ -190,7 +227,9 @@
     it_calcule: 382500
     it_a_payer: 382500
     chiffre_affaire_total: 15000000
-- name: 92 + 96 - avec annexe - avec releve - ch > 50%
+    cstns_calcule: 181250
+    cstns_a_payer: 181250
+- name: 74. 92 + 96 - avec annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -207,15 +246,17 @@
     it_calcule: 251250
     it_a_payer: 251250
     chiffre_affaire_total: 15000000
-- name: 97 + 25 - sans annexe - sans releve
+    cstns_calcule: 118750
+    cstns_a_payer: 118750
+- name: 75. 97 + 25 - sans annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
       entreprise_est_personne_physique: false
-      releve_de_charges_fourni: false
+      releve_de_charges_fourni: true
       annexes_IT_fournies: false
       chiffre_affaire_denrees_emporter_ou_sur_place: 20000000
-      charges_denrees_emporter_ou_sur_place: 0
+      charges_denrees_emporter_ou_sur_place: 20000000
       chiffre_affaire_armateurs: 10000000
       charges_armateurs: 0
     persons:
@@ -224,7 +265,9 @@
     it_calcule: 1332500
     it_a_payer: 1332500
     chiffre_affaire_total: 30000000
-- name: 97 + 25 - avec annexe - avec releve - ch > 50%
+    cstns_calcule: 625000
+    cstns_a_payer: 625000
+- name: 76. 97 + 25 - avec annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -241,15 +284,17 @@
     it_calcule: 666250
     it_a_payer: 666250
     chiffre_affaire_total: 30000000
-- name: 97 + 25 - sans annexe - avec releve - ch > 50%
+    cstns_calcule: 312500
+    cstns_a_payer: 312500
+- name: 77. 97 + 25 - sans annexe - sans releve
   period: 2020
   input:
     entreprise:
       entreprise_est_personne_physique: false
-      releve_de_charges_fourni: true
+      releve_de_charges_fourni: false
       annexes_IT_fournies: false
       chiffre_affaire_denrees_emporter_ou_sur_place: 20000000
-      charges_denrees_emporter_ou_sur_place: 20000000
+      charges_denrees_emporter_ou_sur_place: 0
       chiffre_affaire_armateurs: 10000000
       charges_armateurs: 0
     persons:
@@ -258,7 +303,9 @@
     it_calcule: 1332500
     it_a_payer: 1332500
     chiffre_affaire_total: 30000000
-- name: 97 + 25 - sans annexe - avec releve - ch > 50%
+    cstns_calcule: 625000
+    cstns_a_payer: 625000
+- name: 78. 97 + 25 - sans annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -275,7 +322,9 @@
     it_calcule: 251250
     it_a_payer: 251250
     chiffre_affaire_total: 15000000
-- name: 14 + 98 - sans annexe - avec releve
+    cstns_calcule: 118750
+    cstns_a_payer: 118750
+- name: 79. 14 + 98 - sans annexe - avec releve
   period: 2020
   input:
     entreprise:
@@ -292,7 +341,9 @@
     it_calcule: 320000
     it_a_payer: 320000
     chiffre_affaire_total: 15000000
-- name: 18 + 19 + 99 - avec annexe - avec releve - pers phys
+    cstns_calcule: 153125
+    cstns_a_payer: 153125
+- name: 80. 18 + 19 + 99 - avec annexe - avec releve - pers phys
   period: 2020
   input:
     entreprise:
@@ -311,7 +362,9 @@
     it_calcule: 822500
     it_a_payer: 822500
     chiffre_affaire_total: 26000000
-- name: 18 + 19 + 99 - avec annexe - avec releve - ch > 50% - pers phys
+    cstns_calcule: 387500
+    cstns_a_payer: 387500
+- name: 81. 18 + 19 + 99 - avec annexe - avec releve - ch > 50% - pers phys
   period: 2020
   input:
     entreprise:
@@ -330,7 +383,9 @@
     it_calcule: 546250
     it_a_payer: 546250
     chiffre_affaire_total: 26000000
-- name: 18 + 19 + 99 - sans annexe - avec releve - pers phys
+    cstns_calcule: 257500
+    cstns_a_payer: 257500
+- name: 82. 18 + 19 + 99 - sans annexe - avec releve - pers phys
   period: 2020
   input:
     entreprise:
@@ -349,7 +404,9 @@
     it_calcule: 822500
     it_a_payer: 822500
     chiffre_affaire_total: 26000000
-- name: 18 + 19 + 99 - avec annexe - avec releve
+    cstns_calcule: 387500
+    cstns_a_payer: 387500
+- name: 84. 18 + 19 + 99 - avec annexe - avec releve
   period: 2020
   input:
     entreprise:
@@ -368,7 +425,9 @@
     it_calcule: 822500
     it_a_payer: 822500
     chiffre_affaire_total: 26000000
-- name: 18 + 19 + 99 - avec annexe - avec releve - ch > 50%
+    cstns_calcule: 387500
+    cstns_a_payer: 387500
+- name: 83. 18 + 19 + 99 - avec annexe - avec releve - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -387,7 +446,9 @@
     it_calcule: 546250
     it_a_payer: 546250
     chiffre_affaire_total: 26000000
-- name: 11 + 22 - avec annexe - avec releve - pers phys
+    cstns_calcule: 257500
+    cstns_a_payer: 257500
+- name: 85. 11 + 22 - avec annexe - avec releve - pers phys
   period: 2020
   input:
     entreprise:
@@ -404,7 +465,9 @@
     it_calcule: 232500
     it_a_payer: 232500
     chiffre_affaire_total: 28000000
-- name: 11 + 22 - avec annexe - avec releve - pers phys - ch > 50%
+    cstns_calcule: 151250
+    cstns_a_payer: 151250
+- name: 86. 11 + 22 - avec annexe - avec releve - pers phys - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -421,7 +484,9 @@
     it_calcule: 232500
     it_a_payer: 232500
     chiffre_affaire_total: 28000000
-- name: 11 + 22 - avec annexe - avec releve - pers phys - ch > 50%
+    cstns_calcule: 151250
+    cstns_a_payer: 151250
+- name: 87. 11 + 22 - avec annexe - avec releve - pers phys - ch > 50%
   period: 2020
   input:
     entreprise:
@@ -438,7 +503,9 @@
     it_calcule: 332500
     it_a_payer: 332500
     chiffre_affaire_total: 32000000
-- name: 11 + 22 - avec annexe - avec releve - pers phys
+    cstns_calcule: 196250
+    cstns_a_payer: 196250
+- name: 88. 11 + 22 - avec annexe - avec releve - pers phys
   period: 2020
   input:
     entreprise:
@@ -455,7 +522,9 @@
     it_calcule: 555000
     it_a_payer: 555000
     chiffre_affaire_total: 32000000
-- name: 19 + 97 + 15 + 92 + 10 + 24 - avec annexe - avec releve - pers phys
+    cstns_calcule: 297500
+    cstns_a_payer: 297500
+- name: 89. 19 + 97 + 15 + 92 + 10 + 24 - avec annexe - avec releve - pers phys
   period: 2020
   input:
     entreprise:
@@ -480,7 +549,9 @@
     it_calcule: 3630000
     it_a_payer: 3630000
     chiffre_affaire_total: 120000000
-- name: 19 + 97 + 15 + 92 + 10 + 24 - avec annexe - avec releve - pers phys - charge > 50%
+    cstns_calcule: 1704375
+    cstns_a_payer: 1704375
+- name: 90. 19 + 97 + 15 + 92 + 10 + 24 - avec annexe - avec releve - pers phys - charge > 50%
   period: 2020
   input:
     entreprise:
@@ -505,7 +576,9 @@
     it_calcule: 2960000
     it_a_payer: 2960000
     chiffre_affaire_total: 120000000
-- name: 19 + 97 + 15 + 92 + 10 + 24 - avec annexe - avec releve
+    cstns_calcule: 1393125
+    cstns_a_payer: 1393125
+- name: 91. 19 + 97 + 15 + 92 + 10 + 24 - avec annexe - avec releve
   period: 2020
   input:
     entreprise:
@@ -530,3 +603,5 @@
     it_calcule: 5430000
     it_a_payer: 5430000
     chiffre_affaire_total: 120000000
+    cstns_calcule: 2538750
+    cstns_a_payer: 2538750
