fixed bad description

--- a/openfisca_pf/parameters/dicp/abattements_it_cstns/activites_prestations.yaml
+++ b/openfisca_pf/parameters/dicp/abattements_it_cstns/activites_prestations.yaml
@@ -1,4 +1,4 @@
-description: Taux d'abattement applicables pour le calcul de l'IT pour les activités de type prestation
+description: Codes activités pour le calcul de l'IT pour les activités de type prestation
 metadata:
   reference: https://law.gov.example/basic-income/amount
 acconage_de_coprah:
