Fix build that was a dev env, and allow for version number to be returned as a header now

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends build-essential gcc git
 RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
+RUN pip install wheel
 WORKDIR /openfisca_main
 RUN git clone https://github.com/openfisca/openfisca-core.git
 WORKDIR /openfisca_main/openfisca-core
@@ -11,10 +12,12 @@ RUN pip install .
 WORKDIR /openfisca_main
 COPY openfisca_pf ./openfisca_pf
 COPY Makefile .
+COPY *.md .
+COPY LICENSE .
+COPY *.in .
 COPY *.py ./
-# TODO: fix libyaml missing : NOT WORKING YET. Is it a false alarm ?
-# RUN pip uninstall -y pyyaml && pip install pyyaml --no-cache-dir
-RUN make install
+
+RUN make build
 
 FROM python:3.7-slim
 COPY --from=build /opt/venv /opt/venv
@@ -23,8 +26,6 @@ ENV PATH="/opt/venv/bin:$PATH"
 WORKDIR /openfisca_main
 COPY --from=build /openfisca_main/config.py .
 COPY --from=build /openfisca_main/openfisca_pf ./openfisca_pf
-
-VOLUME /openfisca_main
 EXPOSE 5000/tcp
 
 CMD ["openfisca", "serve", "--configuration-file", "config.py"]
