--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,8 @@ name: Publish Docker images
 on:
   push:
     branches: [ master ]
-    tags: .*
+    tags:
+      - '*'
   pull_request:
     branches: [ master ]
 
