--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,9 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     -
+      name: Tests
+      run: make test
+    -
       name: Build and push (master)
       uses: docker/build-push-action@v2
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
