--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,8 +9,26 @@ on:
     branches: [ master ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    container: python:3.7-slim
+    steps:
+    -
+      name: Checkout
+      uses: actions/checkout@v2
+    -
+      name: Dependencies
+      run: docker/install_deps --test
+    -
+      name: Build
+      run: make build
+    -
+      name: Test
+      run: make test
+
   build:
     runs-on: ubuntu-latest
+    needs: test
     env:
       repo: "govpf/openfisca-pf"
     steps:
@@ -26,16 +44,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - name: Setup python 3
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-    - name: tests
-      run: make test
     -
       name: Build and push (master)
       uses: docker/build-push-action@v2
