--- a/openfisca_pf/parameters/dicp/it/taux_prestations.yaml
+++ b/openfisca_pf/parameters/dicp/it/taux_prestations.yaml
@@ -37,6 +37,8 @@ brackets:
 - rate:
     2020-01-01:
       value: 0.11
+    2021-01-01:
+      value: 0.5
   threshold:
     2020-01-01:
       value: 82500000
