--- a/openfisca_pf/tests/dicp/cst-s/cas_de_tests_cst-s.yaml
+++ b/openfisca_pf/tests/dicp/cst-s/cas_de_tests_cst-s.yaml
@@ -2,344 +2,344 @@
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: -1000
+      revenus_tranche_1: -1000
     persons:
       Alicia: {}
   output:
-    cst_s_totale: 0
+    cst_s_due_totale: 0
 - name: 02 - Montant nul
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 0
+      revenus_tranche_1: 0
     persons:
       Alicia: {}
   output:
-    cst_s_totale: 0
+    cst_s_due_totale: 0
 - name: 03 - Toutes les tranches à 1000000
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 1000000
-      salaires_tranche_1: 1000000
-      salaires_tranche_2: 1000000
-      salaires_tranche_3: 1000000
-      salaires_tranche_4: 1000000
-      salaires_tranche_5: 1000000
-      salaires_tranche_6: 1000000
-      salaires_tranche_7: 1000000
-      salaires_tranche_8: 1000000
-      salaires_tranche_9: 1000000
-      salaires_tranche_10: 1000000
+      revenus_tranche_1: 1000000
+      revenus_tranche_2: 1000000
+      revenus_tranche_3: 1000000
+      revenus_tranche_4: 1000000
+      revenus_tranche_5: 1000000
+      revenus_tranche_6: 1000000
+      revenus_tranche_7: 1000000
+      revenus_tranche_8: 1000000
+      revenus_tranche_9: 1000000
+      revenus_tranche_10: 1000000
+      revenus_tranche_11: 1000000
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 5000
-    cst_s_tranche_1: 30000
-    cst_s_tranche_2: 50000
-    cst_s_tranche_3: 70000
-    cst_s_tranche_4: 90000
-    cst_s_tranche_5: 120000
-    cst_s_tranche_6: 150000
-    cst_s_tranche_7: 180000
-    cst_s_tranche_8: 210000
-    cst_s_tranche_9: 230000
-    cst_s_tranche_10: 250000
-    cst_s_totale: 1385000
+    cst_s_du_tranche_1: 5000
+    cst_s_du_tranche_2: 30000
+    cst_s_du_tranche_3: 50000
+    cst_s_du_tranche_4: 70000
+    cst_s_du_tranche_5: 90000
+    cst_s_du_tranche_6: 120000
+    cst_s_du_tranche_7: 150000
+    cst_s_du_tranche_8: 180000
+    cst_s_du_tranche_9: 210000
+    cst_s_du_tranche_10: 230000
+    cst_s_du_tranche_11: 250000
+    cst_s_due_totale: 1385000
 - name: 04 - 3 tranches
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 3000000
-      salaires_tranche_1: 0
-      salaires_tranche_2: 0
-      salaires_tranche_3: 0
-      salaires_tranche_4: 0
-      salaires_tranche_5: 3000000
-      salaires_tranche_6: 0
-      salaires_tranche_7: 0
-      salaires_tranche_8: 0
-      salaires_tranche_9: 0
-      salaires_tranche_10: 10000000
+      revenus_tranche_1: 3000000
+      revenus_tranche_2: 0
+      revenus_tranche_3: 0
+      revenus_tranche_4: 0
+      revenus_tranche_5: 0
+      revenus_tranche_6: 3000000
+      revenus_tranche_7: 0
+      revenus_tranche_8: 0
+      revenus_tranche_9: 0
+      revenus_tranche_10: 0
+      revenus_tranche_11: 10000000
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 15000
-    cst_s_tranche_1: 0
-    cst_s_tranche_2: 0
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 0
-    cst_s_tranche_5: 360000
-    cst_s_tranche_6: 0
-    cst_s_tranche_7: 0
-    cst_s_tranche_8: 0
-    cst_s_tranche_9: 0
-    cst_s_tranche_10: 2500000
-    cst_s_totale: 2875000
+    cst_s_du_tranche_1: 15000
+    cst_s_du_tranche_2: 0
+    cst_s_du_tranche_3: 0
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 0
+    cst_s_du_tranche_6: 360000
+    cst_s_du_tranche_7: 0
+    cst_s_du_tranche_8: 0
+    cst_s_du_tranche_9: 0
+    cst_s_du_tranche_10: 0
+    cst_s_du_tranche_11: 2500000
+    cst_s_due_totale: 2875000
 - name: 05 - 7 dernières tranches
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 0
-      salaires_tranche_1: 0
-      salaires_tranche_2: 0
-      salaires_tranche_3: 0
-      salaires_tranche_4: 2000000
-      salaires_tranche_5: 3000000
-      salaires_tranche_6: 4000000
-      salaires_tranche_7: 5000000
-      salaires_tranche_8: 6000000
-      salaires_tranche_9: 7000000
-      salaires_tranche_10: 8000000
+      revenus_tranche_1: 0
+      revenus_tranche_2: 0
+      revenus_tranche_3: 0
+      revenus_tranche_4: 0
+      revenus_tranche_5: 2000000
+      revenus_tranche_6: 3000000
+      revenus_tranche_7: 4000000
+      revenus_tranche_8: 5000000
+      revenus_tranche_9: 6000000
+      revenus_tranche_10: 7000000
+      revenus_tranche_11: 8000000
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 0
-    cst_s_tranche_1: 0
-    cst_s_tranche_2: 0
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 180000
-    cst_s_tranche_5: 360000
-    cst_s_tranche_6: 600000
-    cst_s_tranche_7: 900000
-    cst_s_tranche_8: 1260000
-    cst_s_tranche_9: 1610000
-    cst_s_tranche_10: 2000000
-    cst_s_totale: 6910000
+    cst_s_du_tranche_1: 0
+    cst_s_du_tranche_2: 0
+    cst_s_du_tranche_3: 0
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 180000
+    cst_s_du_tranche_6: 360000
+    cst_s_du_tranche_7: 600000
+    cst_s_du_tranche_8: 900000
+    cst_s_du_tranche_9: 1260000
+    cst_s_du_tranche_10: 1610000
+    cst_s_du_tranche_11: 2000000
+    cst_s_due_totale: 6910000
 - name: 06 - small values
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 150
-      salaires_tranche_1: 40
-      salaires_tranche_2: 80
+      revenus_tranche_1: 150
+      revenus_tranche_2: 40
+      revenus_tranche_3: 80
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 0
-    cst_s_tranche_1: 1
-    cst_s_tranche_2: 4
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 0
-    cst_s_tranche_5: 0
-    cst_s_tranche_6: 0
-    cst_s_tranche_7: 0
-    cst_s_tranche_8: 0
-    cst_s_tranche_9: 0
-    cst_s_tranche_10: 0
-    cst_s_totale: 5
+    cst_s_du_tranche_1: 0
+    cst_s_du_tranche_2: 1
+    cst_s_du_tranche_3: 4
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 0
+    cst_s_du_tranche_6: 0
+    cst_s_du_tranche_7: 0
+    cst_s_du_tranche_8: 0
+    cst_s_du_tranche_9: 0
+    cst_s_du_tranche_10: 0
+    cst_s_du_tranche_11: 0
+    cst_s_due_totale: 5
 - name: 07 - big values with low precision
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 15000000000
-      salaires_tranche_6: 1050005005
+      revenus_tranche_1: 15000000000
+      revenus_tranche_7: 1050005005
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 75000000
-    cst_s_tranche_1: 0
-    cst_s_tranche_2: 0
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 0
-    cst_s_tranche_5: 0
-    cst_s_tranche_6: 157500750
-    cst_s_tranche_7: 0
-    cst_s_tranche_8: 0
-    cst_s_tranche_9: 0
-    cst_s_tranche_10: 0
-    cst_s_totale: 232500750
+    cst_s_du_tranche_1: 75000000
+    cst_s_du_tranche_2: 0
+    cst_s_du_tranche_3: 0
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 0
+    cst_s_du_tranche_6: 0
+    cst_s_du_tranche_7: 157500750
+    cst_s_du_tranche_8: 0
+    cst_s_du_tranche_9: 0
+    cst_s_du_tranche_10: 0
+    cst_s_du_tranche_11: 0
+    cst_s_due_totale: 232500750
 - name: 08 - big values with high precision - fails in float32
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_6: 987654321
-      salaires_tranche_7: 987654321
+      revenus_tranche_7: 987654321
+      revenus_tranche_8: 987654321
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 0
-    cst_s_tranche_1: 0
-    cst_s_tranche_2: 0
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 0
-    cst_s_tranche_5: 0
-    cst_s_tranche_6: 148148148
-    cst_s_tranche_7: 177777777
-    cst_s_tranche_8: 0
-    cst_s_tranche_9: 0
-    cst_s_tranche_10: 0
-    cst_s_totale: 325925925
+    cst_s_du_tranche_1: 0
+    cst_s_du_tranche_2: 0
+    cst_s_du_tranche_3: 0
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 0
+    cst_s_du_tranche_6: 0
+    cst_s_du_tranche_7: 148148148
+    cst_s_du_tranche_8: 177777777
+    cst_s_du_tranche_9: 0
+    cst_s_du_tranche_10: 0
+    cst_s_du_tranche_11: 0
+    cst_s_due_totale: 325925925
 - name: 09 - big values with low precision again
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_6: 150000150
-      salaires_tranche_7: 160006000
+      revenus_tranche_7: 150000150
+      revenus_tranche_8: 160006000
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 0
-    cst_s_tranche_1: 0
-    cst_s_tranche_2: 0
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 0
-    cst_s_tranche_5: 0
-    cst_s_tranche_6: 22500022
-    cst_s_tranche_7: 28801080
-    cst_s_tranche_8: 0
-    cst_s_tranche_9: 0
-    cst_s_tranche_10: 0
-    cst_s_totale: 51301102
+    cst_s_du_tranche_1: 0
+    cst_s_du_tranche_2: 0
+    cst_s_du_tranche_3: 0
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 0
+    cst_s_du_tranche_6: 0
+    cst_s_du_tranche_7: 22500022
+    cst_s_du_tranche_8: 28801080
+    cst_s_du_tranche_9: 0
+    cst_s_du_tranche_10: 0
+    cst_s_du_tranche_11: 0
+    cst_s_due_totale: 51301102
 - name: 10 - checking roundings
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_9: 999999999
+      revenus_tranche_10: 999999999
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 0
-    cst_s_tranche_1: 0
-    cst_s_tranche_2: 0
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 0
-    cst_s_tranche_5: 0
-    cst_s_tranche_6: 0
-    cst_s_tranche_7: 0
-    cst_s_tranche_8: 0
-    cst_s_tranche_9: 229999999
-    cst_s_tranche_10: 0
-    cst_s_totale: 229999999
+    cst_s_du_tranche_1: 0
+    cst_s_du_tranche_2: 0
+    cst_s_du_tranche_3: 0
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 0
+    cst_s_du_tranche_6: 0
+    cst_s_du_tranche_7: 0
+    cst_s_du_tranche_8: 0
+    cst_s_du_tranche_9: 0
+    cst_s_du_tranche_10: 229999999
+    cst_s_du_tranche_11: 0
+    cst_s_due_totale: 229999999
 - name: 11 - checking roundings again
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_9: 9999999
+      revenus_tranche_10: 9999999
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 0
-    cst_s_tranche_1: 0
-    cst_s_tranche_2: 0
-    cst_s_tranche_3: 0
-    cst_s_tranche_4: 0
-    cst_s_tranche_5: 0
-    cst_s_tranche_6: 0
-    cst_s_tranche_7: 0
-    cst_s_tranche_8: 0
-    cst_s_tranche_9: 2299999
-    cst_s_tranche_10: 0
-    cst_s_totale: 2299999
+    cst_s_du_tranche_1: 0
+    cst_s_du_tranche_2: 0
+    cst_s_du_tranche_3: 0
+    cst_s_du_tranche_4: 0
+    cst_s_du_tranche_5: 0
+    cst_s_du_tranche_6: 0
+    cst_s_du_tranche_7: 0
+    cst_s_du_tranche_8: 0
+    cst_s_du_tranche_9: 0
+    cst_s_du_tranche_10: 2299999
+    cst_s_du_tranche_11: 0
+    cst_s_due_totale: 2299999
 - name: 12 - random values
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 1000000
-      salaires_tranche_1: 8000000
-      salaires_tranche_2: 800500
-      salaires_tranche_3: 154300
-      salaires_tranche_4: 142865
-      salaires_tranche_5: 3655
-      salaires_tranche_6: 41111
-      salaires_tranche_7: 3700
+      revenus_tranche_1: 1000000
+      revenus_tranche_2: 8000000
+      revenus_tranche_3: 800500
+      revenus_tranche_4: 154300
+      revenus_tranche_5: 142865
+      revenus_tranche_6: 3655
+      revenus_tranche_7: 41111
+      revenus_tranche_8: 3700
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 5000
-    cst_s_tranche_1: 240000
-    cst_s_tranche_2: 40025
-    cst_s_tranche_3: 10801
-    cst_s_tranche_4: 12857
-    cst_s_tranche_5: 438
-    cst_s_tranche_6: 6166
-    cst_s_tranche_7: 666
-    cst_s_totale: 315953
+    cst_s_du_tranche_1: 5000
+    cst_s_du_tranche_2: 240000
+    cst_s_du_tranche_3: 40025
+    cst_s_du_tranche_4: 10801
+    cst_s_du_tranche_5: 12857
+    cst_s_du_tranche_6: 438
+    cst_s_du_tranche_7: 6166
+    cst_s_du_tranche_8: 666
+    cst_s_due_totale: 315953
 - name: 13 - two big values on higher brackets
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_9: 1600060000
-      salaires_tranche_10: 1600000000
+      revenus_tranche_10: 1600060000
+      revenus_tranche_11: 1600000000
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_9: 368013800
-    cst_s_tranche_10: 400000000
-    cst_s_totale: 768013800
+    cst_s_du_tranche_10: 368013800
+    cst_s_du_tranche_11: 400000000
+    cst_s_due_totale: 768013800
 - name: 14 - all at 452555
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 452555
-      salaires_tranche_1: 452555
-      salaires_tranche_2: 452555
-      salaires_tranche_3: 452555
-      salaires_tranche_4: 452555
-      salaires_tranche_5: 452555
-      salaires_tranche_6: 452555
-      salaires_tranche_7: 452555
-      salaires_tranche_8: 452555
-      salaires_tranche_9: 452555
-      salaires_tranche_10: 452555
+      revenus_tranche_1: 452555
+      revenus_tranche_2: 452555
+      revenus_tranche_3: 452555
+      revenus_tranche_4: 452555
+      revenus_tranche_5: 452555
+      revenus_tranche_6: 452555
+      revenus_tranche_7: 452555
+      revenus_tranche_8: 452555
+      revenus_tranche_9: 452555
+      revenus_tranche_10: 452555
+      revenus_tranche_11: 452555
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 2262
-    cst_s_tranche_1: 13576
-    cst_s_tranche_2: 22627
-    cst_s_tranche_3: 31678
-    cst_s_tranche_4: 40729
-    cst_s_tranche_5: 54306
-    cst_s_tranche_6: 67883
-    cst_s_tranche_7: 81459
-    cst_s_tranche_8: 95036
-    cst_s_tranche_9: 104087
-    cst_s_tranche_10: 113138
-    cst_s_totale: 626781
+    cst_s_du_tranche_1: 2262
+    cst_s_du_tranche_2: 13576
+    cst_s_du_tranche_3: 22627
+    cst_s_du_tranche_4: 31678
+    cst_s_du_tranche_5: 40729
+    cst_s_du_tranche_6: 54306
+    cst_s_du_tranche_7: 67883
+    cst_s_du_tranche_8: 81459
+    cst_s_du_tranche_9: 95036
+    cst_s_du_tranche_10: 104087
+    cst_s_du_tranche_11: 113138
+    cst_s_due_totale: 626781
 - name: 15 - the evil one
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 133200
-      salaires_tranche_1: 22200
-      salaires_tranche_2: 13320
-      salaires_tranche_3: 9515
-      salaires_tranche_4: 7400
-      salaires_tranche_5: 5550
-      salaires_tranche_6: 4440
-      salaires_tranche_7: 3700
-      salaires_tranche_8: 3172
-      salaires_tranche_9: 2896
-      salaires_tranche_10: 2664
+      revenus_tranche_1: 133200
+      revenus_tranche_2: 22200
+      revenus_tranche_3: 13320
+      revenus_tranche_4: 9515
+      revenus_tranche_5: 7400
+      revenus_tranche_6: 5550
+      revenus_tranche_7: 4440
+      revenus_tranche_8: 3700
+      revenus_tranche_9: 3172
+      revenus_tranche_10: 2896
+      revenus_tranche_11: 2664
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 666
-    cst_s_tranche_1: 666
-    cst_s_tranche_2: 666
-    cst_s_tranche_3: 666
-    cst_s_tranche_4: 666
-    cst_s_tranche_5: 666
-    cst_s_tranche_6: 666
-    cst_s_tranche_7: 666
-    cst_s_tranche_8: 666
-    cst_s_tranche_9: 666
-    cst_s_tranche_10: 666
-    cst_s_totale: 7326
+    cst_s_du_tranche_1: 666
+    cst_s_du_tranche_2: 666
+    cst_s_du_tranche_3: 666
+    cst_s_du_tranche_4: 666
+    cst_s_du_tranche_5: 666
+    cst_s_du_tranche_6: 666
+    cst_s_du_tranche_7: 666
+    cst_s_du_tranche_8: 666
+    cst_s_du_tranche_9: 666
+    cst_s_du_tranche_10: 666
+    cst_s_du_tranche_11: 666
+    cst_s_due_totale: 7326
 - name: 16 - the bigger one
   period: 2020-01
   input:
     entreprise:
-      salaires_tranche_0: 3186218341
-      salaires_tranche_1: 3186218341
-      salaires_tranche_2: 3186218341
-      salaires_tranche_3: 11123456789
+      revenus_tranche_1: 3186218341
+      revenus_tranche_2: 3186218341
+      revenus_tranche_3: 3186218341
+      revenus_tranche_4: 11123456789
     persons:
       Alicia: {}
   output:
-    cst_s_tranche_0: 15931091
-    cst_s_tranche_1: 95586550
-    cst_s_tranche_2: 159310917
-    cst_s_tranche_3: 778641975
-    cst_s_totale: 1049470533
+    cst_s_du_tranche_1: 15931091
+    cst_s_du_tranche_2: 95586550
+    cst_s_du_tranche_3: 159310917
+    cst_s_du_tranche_4: 778641975
+    cst_s_due_totale: 1049470533
